@@ -1,0 +1,2 @@
+-- Populate the holiday_type table
+INSERT INTO holiday_type (name) VALUES ('Federal'), ('NonPublic'), ('Regional');
