@@ -23,3 +23,6 @@
 /fatal_police_shootings/create.sql
 /evictions/create.sql
 /google_mobility_reports/create.sql
+/holiday_type/create.sql
+/holiday_type/populate.sql
+/holiday/create.sql
